summernote-math, but svg symbols not appearing like \sqrt{}

--- a/src/templates/head_css.html
+++ b/src/templates/head_css.html
@@ -24,6 +24,10 @@
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 <link rel="stylesheet" href="{% static 'css/bootstrap-table-accordion.css' %}" >
 
+
+<!-- KaTeX for math rendering -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0/katex.min.css" rel="stylesheet">
+
 <link href="{% static 'css/jquery-packed-img-strip.css' %}" rel="stylesheet">
 {#<link href="{% static 'css/featherlight.min.css' %}" rel="stylesheet">#}
 
