--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -21,6 +21,10 @@
 {#<script src="{% static 'js/marked.min.js' %}"></script>#}
 
 
+<!-- KaTeX -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0/katex.min.js"></script>
+
+
 <!-- ========================================================== -->
 <!-- Custom js -->
 
