--- a/src/static_in_project/static_root/css/custom_common.css
+++ b/src/static_in_project/static_root/css/custom_common.css
@@ -873,6 +873,13 @@ kbd
         padding-right: 2px;
     }
 
+    .chart-container.well {
+        padding: 5px;
+        margin-left:-7px;
+        margin-right:-7px;
+        border-radius: 0px;
+    }
+
 }
 
 
