--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -38,7 +38,8 @@
 
                 {% if not request.user.is_staff %}
                     <!-- mobile XP -->
-                <ul class="nav navbar-nav navbar-mobile-xp visible-xs-block">
+                    <div class="visible-xs-inline navbar-mobile-xp-container">
+                <ul class="nav navbar-nav navbar-mobile-xp">
                     <li>
                         <a href="{% url 'courses:marks' request.user.id %}"
                             class="navbar-text-large-container">XP:
@@ -46,6 +47,7 @@
                         </a>
                     </li>
                 </ul>
+                    </div>
                 {% endif %}
             {% endif %}
 
