portfolio links and typos

--- a/src/portfolios/templates/portfolios/detail.html
+++ b/src/portfolios/templates/portfolios/detail.html
@@ -19,8 +19,10 @@
                 Your portfolio is {% if not p.listed_locally %}<b>NOT</b> {% endif %} listed <b>locally</b>.
             </div>
             <div class="panel-body">
-                Sharing your portfolio locally means a link to the portfolio will appear in the student list accessed
-                from the Students button at the right.  Edit your portfolio to change this setting.
+                Sharing your portfolio locally means a link to the portfolio will appear in the
+                <a href="{% url 'profiles:profile_list' %}">students list</a> accessed
+                from the Students button at the left.
+                <a href="{% url 'portfolios:edit' p.pk %}">Edit</a> your portfolio to change this setting.
             </div>
         </div>
         <div class="panel panel-warning" >
@@ -28,8 +30,9 @@
                 Your portfolio is {% if not p.listed_publicly %}<b>NOT</b> {% endif %} listed <b>publicly</b>.
             </div>
             <div class="panel-body">
-                Sharing your portfolio locally means a link to the portfolio will appear in the student list accessed
-                from the Students button at the right.  Edit your portfolio to change this setting.
+                Sharing your portfolio publicy means a link to your portfolio will appear in our
+                <a href="{% url 'portfolios:public_list' %}">public list of student portfolios</a>, available to anyone who finds the Hackerspace site.
+                  <a href="{% url 'portfolios:edit' p.pk %}">Edit</a> your portfolio to change this setting.
             </div>
         </div>
         <div class="panel panel-success" title="This section is only visible to you">
