--- a/src/quest_manager/templates/quest_manager/base.html
+++ b/src/quest_manager/templates/quest_manager/base.html
@@ -7,7 +7,7 @@
   <!-- need these loaded first for date-time picker widgets to work I think -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="{% static 'js/bootstrap-datetimepicker.js' %}"></script>
-  {{ form.media }}
+  {{ form.media.css }}
 {% endblock %}
 
 {% block content_first %}{% endblock %}
