bootstrap styling to select2 assertions

--- a/src/badges/templates/badges/assertion_form.html
+++ b/src/badges/templates/badges/assertion_form.html
@@ -3,6 +3,8 @@
 {% load staticfiles %}
 
 {% block head %}
+    {{ form.media.css }}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-theme/0.1.0-beta.10/select2-bootstrap.min.css">
 {% endblock %}
 
 {% block heading_inner %} {{ heading }}{% endblock %}
@@ -16,5 +18,12 @@
 
 {% endblock %}
 {% block js %}
-  {{ form.media }}
+    {{ form.media.js }}
+
+
+    <script>
+        $.fn.select2.defaults.set( "theme", "bootstrap" );
+    </script>
+
+
 {% endblock %}
