--- a/src/quest_manager/templates/quest_manager/submission.html
+++ b/src/quest_manager/templates/quest_manager/submission.html
@@ -3,6 +3,7 @@
 
 {% block head %}
     {{ submission_form.media.css }}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-theme/0.1.0-beta.10/select2-bootstrap.min.css">
 {% endblock %}
 
 {% block head_css %}
@@ -105,4 +106,9 @@
     </script>
 
     {{ submission_form.media.js }}
+
+    <script>
+        $.fn.select2.defaults.set( "theme", "bootstrap" );
+    </script>
+
 {% endblock %}
