--- a/src/static_in_project/static_root/css/custom_common.css
+++ b/src/static_in_project/static_root/css/custom_common.css
@@ -479,7 +479,7 @@ iframe.summernotewidget.form-control {
 }
 
 .form-group-summernote, .panel-summernote #div_id_docfile,
-.panel-summernote #div_id_files, .panel-summernote #div_id_award {
+.panel-summernote #div_id_files, .panel-summernote #div_id_award, .panel-summernote #div_id_awards {
     margin-left: 15px;
     margin-right: 15px;
 }
