bootstrap js conflict still problem

--- a/src/announcements/templates/announcements/form.html
+++ b/src/announcements/templates/announcements/form.html
@@ -4,16 +4,12 @@
 
 {% block head %}
     <!-- need these loaded first for date-time picker and summernote widgets to work -->
-    <script
-			  src="https://code.jquery.com/jquery-2.2.4.min.js"
-			  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-			  crossorigin="anonymous">
-    </script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous">
-    </script>
+
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="{% static 'js/bootstrap-datetimepicker.js' %}"></script>
+
+    <!-- form.media -->
     {{ form.media }}
 {% endblock %}
 
@@ -30,6 +26,6 @@
 {% endblock %}
 
 {% block js %}
-
+{#    {{ form.js }}#}
 {% endblock %}
 
