--- a/src/templates/head_css.html
+++ b/src/templates/head_css.html
@@ -1,20 +1,13 @@
 {% load staticfiles %}
 
-<!-- CSS via CDN -->
-
-{#<link href="{% static 'css/bootstrap-tour.min.css' %}" rel="stylesheet">#}
-{#<link href="{% static 'css/bootstrap-tour-custom.css' %}" rel="stylesheet">#}
-
 <!-- Font Awesome -->
-<!-- http://fortawesome.github.io/Font-Awesome/ -->
-<!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
 <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
 
+<!-- Bootstrap -->
 {% if request.user.profile.dark_theme %}
-  <link href="{% static 'css/bootstrap_slate.min.css' %}" rel="stylesheet">
+<link href="{% static 'css/bootstrap_slate.min.css' %}" rel="stylesheet">
 {% else %}
-  <link
-      rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
       integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
       crossorigin="anonymous">
 {% endif %}
@@ -24,28 +17,22 @@
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 <link rel="stylesheet" href="{% static 'css/bootstrap-table-accordion.css' %}" >
 
-
 <!-- KaTeX for math rendering -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0/katex.min.css" rel="stylesheet">
 
-<link href="{% static 'css/jquery-packed-img-strip.css' %}" rel="stylesheet">
-{#<link href="{% static 'css/featherlight.min.css' %}" rel="stylesheet">#}
-
+<!-- Custom site-wide styles -->
 {% if request.user.profile.dark_theme %}
-  <link href="{% static 'css/custom_slate.css' %}" rel="stylesheet">
+<link href="{% static 'css/custom_slate.css' %}" rel="stylesheet">
 {% else %}
-  <link href="{% static 'css/custom.css' %}" rel="stylesheet">
+<link href="{% static 'css/custom.css' %}" rel="stylesheet">
 {% endif %}
-
 <link href="{% static 'css/custom_common.css' %}" rel="stylesheet">
-
-
+<link href="{% static 'css/jquery-packed-img-strip.css' %}" rel="stylesheet">
 
 <!-- Bootstrap DateTimePicker Widget -->
 <link href="{% static 'css/datetimepicker.css' %}" rel="stylesheet">
 
-
-
+<!-- Mobile device icons -->
 <link rel="apple-touch-icon" sizes="57x57" href="{% static 'icon/apple-icon-57x57.png' %}">
 <link rel="apple-touch-icon" sizes="60x60" href="{% static 'icon/apple-icon-60x60.png' %}">
 <link rel="apple-touch-icon" sizes="72x72" href="{% static 'icon/apple-icon-72x72.png' %}">
