--- a/src/quest_manager/templates/quest_manager/submission.html
+++ b/src/quest_manager/templates/quest_manager/submission.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block head %}
-    {{ submission_form.media.css }}
+    {{ submission_form.media }}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-theme/0.1.0-beta.10/select2-bootstrap.min.css">
 {% endblock %}
 
@@ -104,8 +104,6 @@
             });
         });
     </script>
-
-    {{ submission_form.media.js }}
 
     <script>
         $.fn.select2.defaults.set( "theme", "bootstrap" );
