--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -1,10 +1,10 @@
 {% load staticfiles %}
 <!-- ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script
-    src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
-    crossorigin="anonymous"></script>
+{#<script#}
+{#    src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"#}
+{#    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="#}
+{#    crossorigin="anonymous"></script>#}
 
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
