--- a/src/static_in_project/static_root/css/custom_common.css
+++ b/src/static_in_project/static_root/css/custom_common.css
@@ -686,11 +686,14 @@ already distinguished*/
     border-left: 0;
 }
 
+h3 > img#banner {
+    width:100%;  /* fix for Edge browser which can't handle max-width:100% */
+}
+
 .sidebar-menu {
     font-size: 125%;
     /*display:inline-block
     .text-overflow();*/
-
 }
 
 .sidebar-menu-nav > li > a:focus {
