--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -61,7 +61,7 @@
     {% endif %}
     <div role="alert" class="alert alert-dismissible fade in
           {% if 'error' in message.tags %}alert-danger
-          {% elif 'warning' in message.tags %}alert-warningvn ?.,bnm,.,mbnn,./n m ,m k.;,,l 
+          {% elif 'warning' in message.tags %}alert-warning
           {% elif 'info' in message.tags %}alert-info
           {% elif 'success' in message.tags %}alert-success
           {% endif %}
