--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -153,7 +153,7 @@
                  {% if s.is_returned %}list-group-item-danger
                  {% endif %}">
                <img class="icon-xs" src="{{ s.quest.get_icon_url }}" alt=""/>
-               {{s.quest|truncatechars:40}} <small>({{s.quest.xp}} XP)</small>
+               {{s|truncatechars:40}} <small>({{s.quest.xp}} XP)</small>
              </a>
            {% endfor %}
          {% else %}
@@ -167,7 +167,7 @@
                  {% elif s.game_lab_transfer %}list-group-item-muted
                  {% endif %}">
                <img class="icon-xs" src="{{ s.quest.get_icon_url }}" alt=""/>
-               {{s.quest|truncatechars:40}} <small>
+               {{s|truncatechars:40}} <small>
                 {% if s.game_lab_transfer %}
                   (Quest Skipped)
                 {% else %}
@@ -193,12 +193,12 @@
          <div class="list-group-item list-group-item-info">Completed</div>
          {% if completed_past_submissions %}
            {% for s in completed_past_submissions %}
-             <a href="{{s.get_absolute_url}}" class="list-group-item list-group-item-packed
+               <a href="{{s.get_absolute_url}}" class="list-group-item list-group-item-packed
                  {% if s.is_awaiting_approval %}list-group-item-warning
                  {% elif s.game_lab_transfer %}list-group-item-muted
                  {% endif %}">
                <img class="icon-xs" src="{{ s.quest.get_icon_url }}" alt=""/>
-               {{s.quest|truncatechars:40}} <small>
+               {{s|truncatechars:40}} <small>
                 {% if s.game_lab_transfer %}
                   (Quest Skipped)
                 {% else %}
@@ -213,6 +213,7 @@
         </div>
 
       </div> <!--panel -->
+
 
 
 {#      <div class="panel panel-primary">#}
