--- a/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
@@ -37,7 +37,7 @@
             <div class="col-sm-1 col-xs-2 col-icon">
               <img class="img-responsive panel-title-img img-rounded" src="{{ s.quest.get_icon_url }}" alt="icon"/>
             </div>
-            <div class="col-sm-4 col-xs-5">{{s.quest.name}}</div>
+            <div class="col-sm-4 col-xs-5">{{s.quest_name}}</div>
             <div class="col-sm-1 col-xs-2">{{s.quest.xp}}  </div>
             <div class="col-sm-1 hidden-xs">
               {% for block in s.user.profile.blocks %}{{ block }}{% if not forloop.last %}, {% endif %}{% endfor %}
