In progress and completed submissions when quest deleted.

--- a/src/quest_manager/templates/quest_manager/tab_quests_submission.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_submission.html
@@ -40,7 +40,7 @@
             <div class="col-sm-1 col-xs-2 col-icon">
               <img class="img-responsive panel-title-img img-rounded" src="{{ s.quest.get_icon_url }}" alt="icon"/>
             </div>
-            <div class="col-sm-5 col-xs-8">{{s.quest.name}}</div>
+            <div class="col-sm-5 col-xs-8">{{s.quest_name}}</div>
             <div class="col-sm-1 col-xs-2 text-right">{{s.quest.xp}}  </div>
             <div class="col-sm-2 hidden-xs"><small>
               {% if s.quest.campaign %}{{ s.quest.campaign }} {% else %}-{% endif %}
