summernote widget for portfolio descriptions.  Closes #181

--- a/src/portfolios/templates/portfolios/edit.html
+++ b/src/portfolios/templates/portfolios/edit.html
@@ -1,6 +1,10 @@
 {% extends "portfolios/base.html" %}
 {% load crispy_forms_tags %}
 
+{% block head %}
+    {{ form.media }}
+{% endblock %}
+
 {% block heading_inner %}Editing {{ p.user }}'s Portfolio
 <a class="btn btn-success" href="{% url 'portfolios:detail' p.pk %}" >View</a>
 {% endblock %}
