--- a/src/portfolios/templates/portfolios/base.html
+++ b/src/portfolios/templates/portfolios/base.html
@@ -1,9 +1,14 @@
 {% extends "base_sidebar.html" %}
+{% load staticfiles %}
 
 {% block head_title %}Portfolios | {% endblock %}
+
 {% block head %}{% endblock %}
+
 {% block head_css %}{% endblock %}
+
 {% block content_first %}{% endblock %}
+
 {% block heading %}{% block heading_inner %}{% endblock%}<i class="fa fa-picture-o pull-right"></i>{% endblock %}
 {% block content %}{% endblock %}
 
