--- a/src/portfolios/templates/portfolios/form.html
+++ b/src/portfolios/templates/portfolios/form.html
@@ -1,12 +1,25 @@
 {% extends "portfolios/base.html" %}
 {% load crispy_forms_tags %}
+{% load staticfiles %}
+
+{% block head %}
+    {{ form.media }}
+{% endblock %}
 
 {% block heading_inner %}{{ heading }}{% endblock %}
 
 {% block content %}
+
+    <h1>stuff</h1>
 <form action="{{ action_value }}" enctype="multipart/form-data" method="post">{% csrf_token %}
+
+
   {{ form|crispy }}
   <a href="{% url 'portfolios:detail' object.pk %}" role="button" class="btn btn-danger">Cancel</a>
   <input type="submit" value="{{ submit_btn_value }}" class="btn btn-success" />
 </form>
+{% endblock %}
+
+{% block js %}
+{#    {{ form.js }}#}
 {% endblock %}
